<resources>
    <string name="app_name">Walk!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Walk!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- strings used for fragment_login -->
    <string name="login_button">Accedi</string>
    <string name="login_signup_label">Non hai un account? Registrati</string>
    <string name="reset_password">Ho dimenticato la password</string>

    <!-- strings used for fragment_signin -->
    <string name="signin_button">Registrati</string>
    <string name="username_text">Nome utente</string>
    <string name="signin_login_label">Accedi con il tuo account</string>

    <!-- strings used for fragment_signin and fragment_login -->
    <string name="email_text">Indirizzo email</string>
    <string name="password_text">Password</string>

    <!-- strings used for fragment_home -->
    <string name="menu_home">Home</string>
    <string name="home_welcome">Benvenuto in Walk!</string>
    <string name="home_summary">Vincere è semplice: cammina più degli altri!<br></br>Toccando "Crea partita" potrai essere tu a scegliere la durata. Toccando "Cerca partita" potrai partecipare alle sfide nelle vicinanze.</string>
    <string name="menu_newmatch">Crea partita</string>
    <string name="menu_searchmatch">Cerca partita</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="title_activity_auth">Walk!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- strings used for fragment_newmatch -->
    <string name="newmatch_time_text">Durata della partita in minuti:</string>
    <string name="newmatch_start">Walk!</string>

    <!-- strings used for fragment_searchmatch and fragment_newmatch -->
    <string name="participants">Partecipanti:</string>

    <!-- strings used for fragment_show_ranking -->
    <string name="showranking_rank">Classifica</string>

    <!-- strings used for match_recap_fragment -->
    <string name="matchrecap_timeleft_label">Tempo rimasto</string>
    <string name="matchrecap_steps_label">Passi effettuati</string>
    <string name="matchrecap_steps">0</string>
    <string name="matchrecap_ranking">CLASSIFICA</string>
    <string name="matchrecap_quit">ABBANDONA PARTITA</string>
    <string name="matchrecap_timer">00:00:00</string>

    <!-- strings used for ranking_recyclerview_row -->
    <string name="rankingPosition">Posizione</string>
    <string name="rankingUsername">Username</string>
    <string name="rankingSteps">Passi</string>

    <!-- strings used for fragment_settings -->
    <string name="logout">Logout</string>
    <string name="label_update_password">Inserisci la tua nuova password</string>
    <string name="editText_oldPassword">Vecchia Password</string>
    <string name="editText_password">Nuova Password</string>
    <string name="update_button">Aggiorna</string>
    <string name="label_title_update_password">Aggiornamento Password</string>
    <string name="label_forget_old_password">Ho dimenticato la vecchia password</string>
    <string name="label_logout">Vuoi uscire?</string>
    <string name="label_elimina_account">Eliminazione Account</string>
    <string name="button_elimina_account">Elimina</string>
    <string name="label_forget_password">Ho dimenticato la password</string>
    <string name="label_title_user_info">Informazioni Utente</string>
    <string name="label_email">email</string>
    <string name="label_userame">username</string>



    <!-- strings used for mobile_navigation -->
    <string name="mob_nav_home">Home</string>
    <string name="mob_nav_search_opponent">Ricerca partita</string>
    <string name="mob_nav_newmatch">Crea partita</string>
    <string name="mob_nav_settings">Impostazioni</string>
    <string name="mob_nav_matchrecap">Riepilogo partita</string>
    <string name="mob_nav_ranking">Classifica</string>

    <!-- strings for social logo -->
    <string name="facebook_logo">facebook logo</string>
    <string name="instagram_logo">instagram logo</string>
    <string name="twitter_logo">twitter logo</string>

    <!-- strings for FAQ fragment -->
    <string name="title_faq">FAQ</string>
    <string name="first_question">1. Come Giocare?</string>
    <string name="second_question">2. Come faccio se dimentico la password e non riesco ad accedere?</string>
    <string name="third_question">3. Come aggiorno la mia password?</string>
    <string name="fourth_question">4. Come elimino il mio account?</string>
    <string name="fifth_question">5. Non riesco a trovare una partita</string>
</resources>