<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/search_opponent_layout"
android:configChanges="orientation|keyboardHidden|screenSize"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.matchrecap.MatchRecapFragment">


    <TextView
        android:id="@+id/matchrecap_timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/matchrecap_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/matchrecap_timeleft_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="27sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/matchrecap_steps_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="27sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchrecap_timer_text" />

    <TextView
        android:id="@+id/matchrecap_steps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/matchrecap_steps"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <Button
        android:id="@+id/matchrecap_ranking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matchrecap_ranking"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchrecap_steps_text"
        app:layout_constraintVertical_bias="0.274" />

    <Button
        android:id="@+id/matchrecap_quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matchrecap_quit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchrecap_ranking_button"
        app:layout_constraintVertical_bias="0.16" />


</androidx.constraintlayout.widget.ConstraintLayout>