<?xml version="1.0" encoding="utf-8"?>

<!--
    this is the layout for the single ROWS of the RECYCLER VIEW
    of the SHOWRANKING fragment
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rankingPosition_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rankingPosition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rankingUsername_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rankingUsername"
        app:layout_constraintEnd_toStartOf="@+id/rankingSteps_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rankingSteps_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rankingSteps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>